Add licensing information and fix minor display issues of the README file

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "enjoping/dxfighter",
+    "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Joe Pietler",
