--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
         }
     ],
     "require": {
-        "phpcheckstyle/phpcheckstyle": "^0.14.6"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7",
+        "phpcheckstyle/phpcheckstyle": "^0.14.7"
     }
 }
