Add testreport settings to the sonarqube export

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ addons:
 before_script: composer install
 script:
   - php ./vendor/phpcheckstyle/phpcheckstyle/run.php --src ./DXFighter.php --src ./lib --config ./phpcheckstyle.xml
-  - ./vendor/bin/phpunit --bootstrap vendor/autoload.php --testdox tests
+  - ./vendor/bin/phpunit --bootstrap vendor/autoload.php --testdox tests --log-junit testreport.xml
   - sonar-scanner
 notifications:
     slack: laecherbar:y1NWyusbhnKv2tGC3XQCmmJW
