Add coverage configuration to the sonarqube export settings

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,3 +12,4 @@ sonar.sources=lib
 #sonar.sourceEncoding=UTF-8
 
 sonar.php.tests.reportPath=testreport.xml
+sonar.php.coverage.reportPaths=coverage.xml
